# trafficlab

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-2-report.md
architecture/: CONFIGURATION.md  DEVELOPMENT.md  README.md  VALIDATION.md
architecture/amendments/: 0001_ARTIFACT_IO_NAMESPACE_STABILITY.md  0002_RESOURCE_STORAGE_RESERVATION.md
architecture/apps/: README.md
architecture/common/: artifact-lifecycle.md  observability.md  orchestration.md  platform.md  reproducibility.md  resources.md  security.md
architecture/contracts/: README.md  dataset.md  metric-result.md  model-artifact.md  packet-events.md  run-directory.md  stage.md  validation-report.md
architecture/genetic_models/: README.md
architecture/ide_integration/: VSCODE.md
architecture/implementations/: README.md
architecture/infrastructure/: CONFIGS.md  README.md  ROADMAP.md  SAD.md  SRS.md
architecture/libs/: README.md
architecture/project/: CONFIGS.md  IMPLEMENTATION_STRUCTURE.md  LOGGING.md  README.md  RESOURCE_MANAGEMENT.md  ROADMAP.md  SAD.md  SRS.md  WORKFLOWS.md  assets.md  code-style.md  decisions.md  dependencies.md  repository.md  risks.md  roadmap.md  testing.md
architecture/scripts/: README.md
architecture/similarity_methods/: KS.md  README.md  TEMPORAL_L2.md
architecture/system/: modules.md  overview.md  pipeline.md  programs.md  scenarios.md  scope.md
architecture/traffic_models/: NEURAL_MARKED_POINT_PROCESS.md  POISSON.md  README.md
assets/: README.md
configs/: 00_preflight.toml  10_capture.toml  20_convert.toml  README.md
configs/30_genetic_training/: genetic_strategy.toml
docs/configs/: 00_preflight.md  10_capture.md  20_convert.md  30_genetic_training.md  README.md
docs/network_workspaces/: README.md  dedicated_workspace.md  (+1 more)
schemas/: README.md
scripts/: bootstrap-wsl.sh  clean-orphans.sh  install-capture-helper.sh  preflight.sh
tools/: __init__.py  _architecture_markdown.py  quality.py  validate_architecture.py  validate_whitespace.py
(+586 files in other folders)
