[project]
name = "trafficlab"
version = "0.1.0"
description = "Воспроизводимый конвейер моделирования сетевого трафика"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
trafficlab = "trafficlab.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
